# loom

./: .gitignore  INSTALLATION.md  LICENSE  README.md  loom.db  pyproject.toml
loom/: __main__.py  cli.py
loom/api/: base_provider.py  provider.py
loom/database/: branch_storage.py  chat_storage.py  db.py  model_manager.py  workspace_storage.py
loom/errors/: __init__.py
loom/models/: error.py  message.py  model.py  stream.py
loom/ui/: log_viewer.py  loom_ui.py
