[project]
name = "loom-cli"
version = "0.1.0"
description = "Universal CLI for LLMs via OpenRouter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "SQLAlchemy>=2.0.49",
    "typer>=0.25.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
loom = "loom.cli:main"
